--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
@@ -16,12 +16,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongoose": "^8.14.0",
-    "multer": "^1.4.5-lts.2",
     "multer-storage-cloudinary": "^4.0.0",
-    "socket.io": "^4.8.1",
-    "streamifier": "^0.1.1"
-  },
-  "devDependencies": {
     "nodemon": "^3.1.10"
   }
 }
