--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://stanleybankesie:originator@cluster0.kiof81h.mongodb.net/gallery?retryWrites=true&w=majority
+MONGODB_URI="mongodb+srv://stanleybankesie:originator@cluster0.kiof81h.mongodb.net/gallery?retryWrites=true&w=majority"
 CLOUDINARY_CLOUD_NAME=dgqofbutz
 CLOUDINARY_API_KEY=325896239316776
 CLOUDINARY_API_SECRET=pJIBinZ_lZ0VTwP8lTEgyJgBjzA
